# dailyplanner_react

./: .babelrc  .env.local.sample  .eslintignore  .eslintrc.json  .gitlab-ci.yml  .prettierignore  CHANGELOG.md  README.md  components.json  cypress.config.ts  index.html  jest.config.js  package-lock.json  package.json  renovate.json  sonar-project.properties  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  webpack.config.js
.husky/: pre-commit
__mocks__/: cards.mock.ts  context.mock.ts  tasks.mock.ts  zustand.ts
cypress/e2e/: board.cy.ts  lane.cy.ts
cypress/mocks/: cards.mock.ts
cypress/support/: commands.ts  index.ts
cypress/utils/: board.util.ts  lane.util.ts
deploy/: deploy.sh  prune.sh  setup_env.sh
public/: .env.production  index.html  manifest.json
release/linux/: dayplanner_0.1.1_amd64.deb  dayplanner_0.2.0_amd64.deb  dayplanner_0.2.1_amd64.deb  dayplanner_0.3.0_amd64.deb  dayplanner_0.4.0_amd64.deb  dayplanner_0.4.1_amd64.deb
release/windows/: Dayplanner_0.1.1_x64_en-US.msi  Dayplanner_0.2.0_x64_en-US.msi  Dayplanner_0.2.1_x64_en-US.msi  Dayplanner_0.3.0_x64_en-US.msi  Dayplanner_0.4.0_x64_en-US.msi  Dayplanner_0.4.1_x64_en-US.msi
src/: i18n.ts  index.css  index.tsx  main.css  main.tsx  reportWebVitals.ts  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/HistoryToggle/: HistoryToggle.tsx
src/context/: BoardContext.spec.tsx  BoardContext.tsx  initialBoard.state.ts  initialLanes.state.ts
src/hooks/: useHistory.tsx
src/interfaces/: Board.ts  Card.ts  HeroContents.ts  Lane.ts  (+4 more)
(+338 files in other folders)
